--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -22,18 +22,31 @@ body {
   font-family: $font--main;
   background-color: $background;
   color: $text-main;
+  text-wrap: balance;
   
   a {
 	  text-decoration: none;
 	  color: black;
+  }
+
+  img {
+	max-width: 100%;
+  }
+
+  section {
+	margin: 1rem 0;
   }
 }
 
 
 // INTRO //
 
-#logo {
-	width: 500px;
+#intro {
+	max-width: 500px;
+}
+
+.subtitle {
+	font-size: 20px;
 }
 
 .icon {
@@ -48,20 +61,21 @@ body {
 
 // ICONS //
 .icons {
-
+	font-size: 14px;
 	margin: 1rem 0;
+	flex-wrap: wrap;
 
 	&.icons-d {
 		align-self: end;
 	}
 
 	a {
-		margin: 0 1rem;
+		margin: 0 .75rem;
 		display: flex;
 		align-items: center;
 
 		img {
-			margin-right: .5rem
+			margin-right: .25rem
 		}
 	}
 }
@@ -75,6 +89,7 @@ body {
 		flex-direction: column;
 		flex-wrap: wrap;
 		max-height: 200px;
+		padding: 0;
 
 		li {
 			margin: .5rem;
@@ -94,4 +109,10 @@ body {
 		border-radius: 20px;
 		max-width: 100%;
 	}
+}
+
+// TESTIMONIALS //
+
+#testimonials {
+	max-width: 500px;
 }
