--- a/css/sass/_var.scss
+++ b/css/sass/_var.scss
@@ -1,13 +1,13 @@
 $pink: #FFB1B1;
 $blue: #91B0FF;
 
-$text-main: #444;
+$text-main: #232323;
 $text-body: #666;
 $text-accent: #f52423;
 $link: #0f2c0e;
 $link--hover: #db0a0a;
 $background: #fff;
 $font--main: 'Roboto', 'Helvetica', sans-serif;
-$shadow: 0px 5px 16px rgba(0,0,0,0.3);
+$shadow: 0px 5px 16px rgba(0, 0, 0, 0.3);
 $margin-bottom: 3%;
 $transition: .25s;
